# Bioinformatics

./: CMakeLists.txt  LICENSE.md  README.md  algorithms.hpp  fasta_io.cpp  fasta_io.h  fasta_io.hpp  kmer_util.hpp  main.cpp  test.fasta
Documentation/: Documentation.docx  ~WRL1727.tmp
Project/: DEBUG_UTIL.hpp  algorithms.hpp  fasta_io.hpp  kmer_util.hpp  main.cpp
Scripts/: filter.py  go.sh  results.py  skracivanje.py
TestData/: 1e4.fasta
TestData/1e4_out/: avg.txt  out1.txt  out10.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
TestData/ERR233214_1/: avg.txt  out1.txt  out10.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
TestData/SRR1031159_1_1e6_out/: 2kbf.txt  avg.txt  out1.txt  out10.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
TestData/SRR1031159_1_out/: avg.txt  out1.txt  out10.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
lib/libbf/bf/: all.hpp  counter_vector.hpp
lib/libbf/bf/bloom_filter/: a2.hpp  bitwise.hpp  counting.hpp  stable.hpp
lib/libbf/src/: bitvector.cpp  counter_vector.cpp  hash.cpp
lib/libbf/src/bloom_filter/: a2.cpp  basic.cpp  bitwise.cpp  counting.cpp  stable.cpp
